--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.15",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
