--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^8.0.2",
