--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "반응속도 테스트 사이트",
   "private": true,
   "scripts": {
-    "build": "webpack",
+    "deploy": "gh-pages -d docs",
     "dev": "cross-env WEBPACK_ENV=development webpack --config webpack.config.js",
     "prod": "cross-env WEBPACK_ENV=production webpack --config webpack.config.js",
     "watch": "webpack --watch",
@@ -19,8 +19,10 @@
   "bugs": {
     "url": "https://github.com/sosisusy/reaction-rate-site/issues"
   },
-  "homepage": "https://github.com/sosisusy/reaction-rate-site#readme",
-  "dependencies": {
+  "homepage": "https://sosisusy.github.io/reaction-rate-site",
+  "dependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^3.3.11",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
@@ -29,6 +31,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
@@ -44,8 +47,5 @@
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.11.0"
-  },
-  "devDependencies": {
-    "webpack-cli": "^3.3.11"
   }
 }
