--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "반응속도 테스트 사이트",
   "private": true,
   "scripts": {
-    "deploy": "gh-pages -d docs",
+    "build": "webpack",
     "dev": "cross-env WEBPACK_ENV=development webpack --config webpack.config.js",
     "prod": "cross-env WEBPACK_ENV=production webpack --config webpack.config.js",
     "watch": "webpack --watch",
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/sosisusy/reaction-rate-site/issues"
   },
-  "homepage": "https://sosisusy.github.io/reaction-rate-site",
+  "homepage": "https://github.com/sosisusy/reaction-rate-site#readme",
   "dependencies": {},
   "devDependencies": {
     "webpack-cli": "^3.3.11",
@@ -31,7 +31,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
-    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
