--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "homepage": "https://github.com/sosisusy/reaction-rate-site#readme",
   "dependencies": {},
   "devDependencies": {
-    "webpack-cli": "^3.3.11",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
@@ -31,6 +30,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^1.8.0",
     "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
@@ -45,6 +45,7 @@
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   }
 }
